@@ -224,7 +224,7 @@ makedirs:
 	if [ ! -d $(SIM_OBJ_FILES_DIR)/intersim ]; then mkdir -p $(SIM_OBJ_FILES_DIR)/intersim; fi;
 	if [ ! -d $(GPGPUSIM_ROOT)/src/cpu-sim/bin ]; then mkdir -p $(GPGPUSIM_ROOT)/src/cpu-sim/bin; fi;
 	if [ ! -d $(SIM_OBJ_FILES_DIR)/cuobjdump_to_ptxplus ]; then mkdir -p $(SIM_OBJ_FILES_DIR)/cuobjdump_to_ptxplus; fi;
-	if [ ! -d $(GPGPUSIM_POWER_MODEL)/obj_opt ] && [ ! -n $(GPGPUSIM_POWER_MODEL) ]; then mkdir -p $(GPGPUSIM_POWER_MODEL)/obj_opt; fi;
+	if [ ! -d $(GPGPUSIM_POWER_MODEL)/obj_opt ] && [ ! -z $(GPGPUSIM_POWER_MODEL) ]; then mkdir -p $(GPGPUSIM_POWER_MODEL)/obj_opt; fi;
 
 all:
 	$(MAKE) gpgpusim
