@@ -2,6 +2,14 @@ TAR = mcpat
 
 .PHONY: dbg opt depend clean clean_dbg clean_opt
 
+OPTFLAGS = -fPIC
+CPP = g++
+CC = $(shell ls *.cc)
+OBJS = $(CC:%.cc=%.o)
+
+%.o: %.cc
+	$(CPP) $(OPTFLAGS) $(CXXFLAGS) $(POWER_FLAGS) -o ./obj_opt/$*.o -c $*.cc
+
 all: opt
 
 dbg: $(TAR).mk obj_dbg
