@@ -16,3 +16,12 @@ config.l:19:5: error: redefinition of 'int configlineno'
  int configlineno = 1;
 
 edit config.l and rename configlineno. Replace all instances with new name.
+
+2.
+
+Edit ./Makefile line 227, -z to -n in second conditional. This allows makefile to create the correct directory.
+if [ ! -d $(GPGPUSIM_POWER_MODEL)/obj_opt ] && [ ! -z $(GPGPUSIM_POWER_MODEL) ]; then mkdir -p $(GPGPUSIM_POWER_MODEL)/obj_opt; fi;
+
+Edit src/Makefile and add the following vars before the first rule:
+//GPUWATCH1 = $(shell ls gpuwattch/*.cc)
+//GPUWATCH2 = $(notdir $(GPUWATCH1))
